fix(react-video-demo): fix alignment and chat bugs (#916)
Fixes - see commit messages

---------

--- a/sample-apps/react/react-video-demo/src/components/Sidebar/Sidebar.module.css
+++ b/sample-apps/react/react-video-demo/src/components/Sidebar/Sidebar.module.css
@@ -9,7 +9,6 @@
 
 .branding {
   @apply flex items-center justify-center w-full;
-  bottom: 40px;
 }
 
 .logo {
